--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 .input-group input:focus + label,
 .input-group input:valid + label {
-    padding-left: 5px; /* Add space to the left */
+    padding-left: 5px;
     padding-right: 5px;
     top: -5px;
     left: 5px;
@@ -85,11 +85,11 @@ button:hover {
 }
 
 .input-group.error input {
-    border-color: red; /* Change input border to red */
+    border-color: red;
 }
 
 #error-message {
-    color: red; /* Error message text color */
-    text-align: center; /* Center align the error message */
-    margin-top: 10px; /* Spacing above the error message */
+    color: red;
+    text-align: center;
+    margin-top: 10px;
 }
